# rag-style-finder

./: .env.template  .gitignore  COMMIT_MESSAGE.md  GETTING_STARTED.md  README.md  download_dataset.py  launch.sh  main.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test.py  test_dimensions.py
src/rag_style_finder/: __init__.py  app.py  config.py  helpers.py  image_processor.py  llm_service.py
